--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -8,7 +8,9 @@
     width: 100%;
     height: 100%;
 
-    font-size: 24px;
+    font-size: 18px;
+    line-height: 24px;
+
     font-weight: 700;
     color: #262626;
 
