--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,5 +1,7 @@
 .global {
-  position: relative;
+  position: absolute;
+  top: 0;
+  right: 0;
 
   display: flex;
   justify-content: center;
@@ -8,15 +10,42 @@
   width: 100vw;
   height: 100vh;
   .modal {
+    display: flex;
+    flex-direction: column;
+
     width: 520px;
+    border-radius: 4px;
+    background-color: #fff;
+
+    box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+    z-index: 2;
     header {
       position: relative;
       padding: 16px 24px;
 
       border-bottom: 1px solid #f0f0f0;
       border-radius: 4px 4px 0 0;
+      span {
+        font-size: 16px;
+        line-height: 22px;
+        font-weight: 500;
+        color: rgba(0, 0, 0, 0.85);
+      }
+      i {
+        position: absolute;
+        top: 20px;
+        right: 24px;
+        color: rgba(0, 0, 0, 0.45);
+
+        cursor: pointer;
+        transition: color 0.3s;
+        &:hover {
+          color: #1890ff;
+        }
+      }
     }
     main {
+      flex: 1;
       padding: 24px;
       font-size: 14px;
       line-height: 1.5715;
@@ -28,6 +57,20 @@
 
       border-top: 1px solid #f0f0f0;
       border-radius: 0 0 2px 2px;
+      .cancel-btn {
+        margin-right: 12px;
+      }
     }
+  }
+  .bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100vw;
+    height: 100vh;
+
+    background-color: rgba(0, 0, 0, 0.45);
+    z-index: 1;
   }
 }
