--- a/src/views/Note/Note.module.scss
+++ b/src/views/Note/Note.module.scss
@@ -1,26 +1,44 @@
 .note-module {
-  padding: 20px;
   width: 100%;
   height: 100vh;
-  .create {
-    width: 133px;
-    height: 190px;
+  .book-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px 50px;
+    .create {
+      width: 133px;
+      height: 190px;
 
-    line-height: 190px;
-    text-align: center;
-    color: #808080;
+      line-height: 190px;
+      text-align: center;
+      color: #808080;
 
-    border: 1px dashed #808080;
-    border-radius: 2px;
+      border: 1px dashed #808080;
+      border-radius: 2px;
 
-    cursor: pointer;
-    transition: all 0.6s;
-    &:hover {
-      color: #1890ff;
-      border-color: #1890ff;
+      cursor: pointer;
+      transition: all 0.218s;
+      &:hover {
+        color: #1890ff;
+        border-color: #1890ff;
+      }
+      i {
+        font-size: 24px;
+      }
     }
-    i {
-      font-size: 24px;
+  }
+  .modify-content {
+    display: flex;
+    height: 100%;
+    .left {
+      padding: 20px;
+      padding-left: 0;
+      border-right: 1px solid #f0f0f0;
+    }
+    .right {
+      flex: 1;
+      padding: 20px;
+      padding-right: 0;
     }
   }
 }
