update: add focus event of Editor

--- a/src/views/Edit/Edit.module.scss
+++ b/src/views/Edit/Edit.module.scss
@@ -6,7 +6,7 @@
   .operation-panel {
     position: fixed;
     top: 0;
-    left: calc(50% - 182px);
+    left: calc(20%);
   }
   .edit-area {
     margin: 0 auto;
