--- a/src/views/Edit/Edit.module.scss
+++ b/src/views/Edit/Edit.module.scss
@@ -1,17 +1,37 @@
 .edit {
   padding: 20px;
-  padding-top: 62px;
   width: 100vw;
   box-sizing: border-box;
   .operation-panel {
-    position: fixed;
-    top: 0;
-    left: calc(20%);
-  }
-  .edit-area {
     margin: 0 auto;
     width: 60%;
+  }
+  .edit-area {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0 auto;
+    width: 60%;
+
     font-size: 16px;
     line-height: 1.5;
+
+    textarea {
+      margin-top: 20px;
+      border: none;
+      outline: none;
+      resize: none;
+    }
+
+    textarea:first-child {
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 1.5;
+    }
+
+    textarea:nth-child(2) {
+      font-size: 18px;
+      line-height: 1.5;
+    }
   }
 }
